--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <p> Will Add Soon</p>
           </div>
           <div class="project-img">
-            <img src="img/prject.png" alt="img">
+            <img src="img/project.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -316,7 +316,7 @@
             <p>Will Add Soon</p>
           </div>
           <div class="project-img">
-            <img src="img/prject.png" alt="img">
+            <img src="img/project.png" alt="img">
           </div>
         </div>
       </div>
