--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>My Website</title>
+  <title>My Portfolio</title>
+  <link rel="icon" href="img/logo1.png" type="image/x-icon">
 </head>
 
 <body>
