added an experience

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                       <li>Extracted settlement data, providing valuable insights to clients on urbanization patterns and trends.</li>
                       <li>Prepared detailed reports, actively participated in client meetings, and presented results effectively.</li>
                       <li>Conducted flood mapping using Synthetic Aperture Radar (SAR) data.</li>
+                      <li>Produced Land Use and Land Cover (LULC) maps for change detection, and trend analysis.</li>
                   </ul>
               </div>
       </div>
