--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                       <li>Prepared detailed reports, actively participated in client meetings, and presented results effectively.</li>
                       <li>Conducted flood mapping using Synthetic Aperture Radar (SAR) data.</li>
                       <li>Produced Land Use and Land Cover (LULC) maps for change detection, and trend analysis.</li>
+                      <li>Conducted site suitability analysis for rice cultivation.</li>
                   </ul>
               </div>
       </div>
