--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             <li>Time management</li>
             <li>Driving</li>
             <li>Microsoft Word and Excel</li>
+            <li>First Aid</li>
           </ul>
         </div>
       </div>
