--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
                 <li>Impact of accessibility on the commercial value of Green Spaces in Edinburgh</li>
                 <li>Interactive Web Map of the University of Edinburgh for students and staff</li>
               </ul>
+              <ul>
+                <b>Class Representative: Social</b>
+              </ul>
           </ul>
         </div>
       </div>
