--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <li>Interactive Web Map of the University of Edinburgh for students and staff</li>
               </ul>
               <ul>
-                <b>Class Representative: Social</b>
+                <b>Class Representative: Social Events </b>
               </ul>
           </ul>
         </div>
