--- a/index.html
+++ b/index.html
@@ -167,15 +167,24 @@
               <p><h3>Vasundharaa Geo technologies Pvt. Ltd.- Pune, India.</h3></p>
               <p>September 2021 - June 2022</p>
                   <ul>
-                      <li>Assessed the impact of water interventions on soil through comprehensive analysis.</li>
-                      <li>Created vector data for the government, defining electoral wards for efficient governance.</li>
-                      <li>Detected and tracked illegal construction by implementing change detection techniques.</li>
-                      <li>Generated accurate vector data and estimated temporal change for private properties.</li>
-                      <li>Extracted settlement data, providing valuable insights to clients on urbanization patterns and trends.</li>
-                      <li>Prepared detailed reports, actively participated in client meetings, and presented results effectively.</li>
-                      <li>Conducted flood mapping using Synthetic Aperture Radar (SAR) data.</li>
-                      <li>Produced Land Use and Land Cover (LULC) maps for change detection, and trend analysis.</li>
-                      <li>Conducted site suitability analysis for rice cultivation.</li>
+                      <li> Performed an impact assessment to analyze the effects of water interventions on soil quality, 
+                        employing various indices, including NDVI, IPVI, NDWI, and LST using Sentinel-2 and Landsat data. 
+                        The insights of this analysis contributed to informed decision-making processes.</li>
+                      <li> Extracted settlement data and Implemented change detection techniques to detect and track illegal 
+                        construction activities, providing valuable insights into urbanization trends and contributing to improved 
+                        urban management.</li>
+                      <li> Utilized Synthetic Aperture Radar (SAR) data from Sentinel-1 satellite for flood mapping using SNAP, enhancing 
+                        disaster preparedness and response efforts.</li>
+                      <li> Generated Land Use and Land Cover (LULC) maps for change detection and trend analysis, supporting 
+                        land management initiatives.</li>
+                      <li> Conducted site suitability analysis for rice cultivation, optimizing agricultural practices for increased 
+                          productivity.</li>
+                      <li>Successfully managed a project of vector data creation for an entire city, helping the government in 
+                          efficient urban planning.</li>
+                      <li> Produced accurate vector data and estimated temporal changes for private properties, aiding clients in 
+                          making real estate decisions.</li>
+                      <li> Prepared detailed reports, actively engaged in client meetings, and effectively presented results, 
+                        ensuring clear communication of findings and recommendations.</li>
                   </ul>
               </div>
       </div>
@@ -199,10 +208,14 @@
               <p><h3>Terra Informatics Services Pvt. Ltd. - Pune, India.</h3></p>
               <p>April 2020 – June 2021</p>
                     <ul>
-                      <li>Collected and processed UAV data using Pix4D software.</li>
-                      <li>Trained Interns on AutoCAD, Q-GIS, and company design standards.</li>
-                      <li>Employed UAV data to measure the area under cultivation for agricultural analysis.</li>
-                      <li>Conducted comprehensive analysis of pipe distribution networks using drone and DGPS data.</li>
+                      <li> Collected optical data using drones and DGPS technology and utilized Pix4D software to process UAV 
+                        data for diverse projects, to deliver precise and high-quality imagery.</li>
+                      <li> Demonstrated strong leadership by training interns in AutoCAD, Q-GIS, and the company's design
+                        standards, fostering a skilled workforce, and maintaining consistent design practices.</li>
+                      <li>Leveraged UAV data to precisely measure cultivated areas, facilitating in-depth agricultural analysis and 
+                        enhancing decision-making in the agriculture sector.</li>
+                      <li>Executed a comprehensive analysis of pipe distribution networks by harnessing drone and DGPS data, 
+                          optimizing infrastructure management and maintenance strategies.</li>
                     </ul>
             </div>
         </div>
@@ -244,12 +257,22 @@
                 <li>Active Remote Sensing: Radar and Lidar</li>
               </ul>
               <ul>
-                <b>Project Manager:</b>
-                <li>Impact of accessibility on the commercial value of Green Spaces in Edinburgh</li>
-                <li>Interactive Web Map of the University of Edinburgh for students and staff</li>
+                <b>Projects:</b>
+                <li> <h3>Compared commercial values of green spaces in Edinburgh using accessibility analysis.</h3>
+                    Conducted a comprehensive survey to gather essential data and performed an accessibility analysis to 
+                    explore the interplay between accessibility factors and the economic worth of green spaces.</li>
+                <li> <h3>Interactive Web map of the University of Edinburgh.</h3>
+                    Developed an interactive web map of campus facilities and services at the University of Edinburgh using 
+                    Oracle Spatial, SQL, HTML, CSS, JavaScript, and Python techniques.</li>
+                  <li> <h3>I Change detection in Ice Volume.</h3>
+                   Handled a large volume of LVIS data in HDF5 to perform change detection on Pine Island Glacier 
+                   using Python.</li>
+                  <li> <h3>Exploring Patterns in Census Data of the City of Edinburgh.</h3>
+                    Utilized Self-Organizing Maps (SOM), an unsupervised machine learning technique, to analyze census 
+                    data in the city of Edinburgh.</li>
               </ul>
               <ul>
-                <b>Class Representative: Social Events </b>
+                <b>Class Representative: Social Events - Coordinated social events as the Class Representative. </b>
               </ul>
           </ul>
         </div>
@@ -271,6 +294,10 @@
                 <li>Photogrammetry</li>
                 <li>Database Management</li>
               </ul>
+            <ul>
+              <b>Conference Presentation:</b> - Presented findings on the effective use of UAV and DGPS data in designing a pipe 
+        distribution network, at the National Web Conference Institute of Indian Geographers. 
+            </ul>
           </ul>
         </div>
       </div>
