--- a/index.html
+++ b/index.html
@@ -164,29 +164,19 @@
         <div class="numbertext">1 / 3</div>
           <div>
               <h2>Geospatial Engineer</h2>
-              <p><h3>Vasundharaa Geo technologies Pvt. Ltd.- Pune, India.</h3></p>
+              <h3>Vasundharaa Geo technologies Pvt. Ltd.- Pune, India.</h3>
               <p>September 2021 - June 2022</p>
-                  <ul>
-                      <li> Performed an impact assessment to analyze the effects of water interventions on soil quality, 
-                        employing various indices, including NDVI, IPVI, NDWI, and LST using Sentinel-2 and Landsat data. 
-                        The insights of this analysis contributed to informed decision-making processes.</li>
-                      <li> Extracted settlement data and Implemented change detection techniques to detect and track illegal 
-                        construction activities, providing valuable insights into urbanization trends and contributing to improved 
-                        urban management.</li>
-                      <li> Utilized Synthetic Aperture Radar (SAR) data from Sentinel-1 satellite for flood mapping using SNAP, enhancing 
-                        disaster preparedness and response efforts.</li>
-                      <li> Generated Land Use and Land Cover (LULC) maps for change detection and trend analysis, supporting 
-                        land management initiatives.</li>
-                      <li> Conducted site suitability analysis for rice cultivation, optimizing agricultural practices for increased 
-                          productivity.</li>
-                      <li>Successfully managed a project of vector data creation for an entire city, helping the government in 
-                          efficient urban planning.</li>
-                      <li> Produced accurate vector data and estimated temporal changes for private properties, aiding clients in 
-                          making real estate decisions.</li>
-                      <li> Prepared detailed reports, actively engaged in client meetings, and effectively presented results, 
-                        ensuring clear communication of findings and recommendations.</li>
-                  </ul>
-              </div>
+                 <ul>
+                    <li> Performed an impact assessment to analyze the effects of water interventions on soil quality, employing various indices, including NDVI, IPVI, NDWI, and LST using Sentinel-2 and Landsat data. The insights of this analysis contributed to informed decision-making processes.</li>
+                    <li> Extracted settlement data and implemented change detection techniques to detect and track illegal construction activities, providing valuable insights into urbanization trends and contributing to improved urban management.</li>
+                    <li> Utilized Synthetic Aperture Radar (SAR) data from Sentinel-1 satellite for flood mapping using SNAP, enhancing disaster preparedness and response efforts.</li>
+                    <li> Generated Land Use and Land Cover (LULC) maps for change detection and trend analysis, supporting land management initiatives.</li>
+                    <li> Conducted site suitability analysis for rice cultivation, optimizing agricultural practices for increased productivity.</li>
+                    <li> Successfully managed a project of vector data creation for an entire city, helping the government in efficient urban planning.</li>
+                    <li> Produced accurate vector data and estimated temporal changes for private properties, aiding clients in making real estate decisions.</li>
+                    <li> Prepared detailed reports, actively engaged in client meetings, and effectively presented results, ensuring clear communication of findings and recommendations.</li>
+                </ul>
+        </div>
       </div>
       
       <div class="mySlides fade experience-slides">
@@ -205,18 +195,14 @@
           <div class="numbertext">3 / 3</div>
             <div>
               <h2>GIS Analyst</h2>
-              <p><h3>Terra Informatics Services Pvt. Ltd. - Pune, India.</h3></p>
+              <h3>Terra Informatics Services Pvt. Ltd. - Pune, India.</h3>
               <p>April 2020 – June 2021</p>
-                    <ul>
-                      <li> Collected optical data using drones and DGPS technology and utilized Pix4D software to process UAV 
-                        data for diverse projects, to deliver precise and high-quality imagery.</li>
-                      <li> Demonstrated strong leadership by training interns in AutoCAD, Q-GIS, and the company's design
-                        standards, fostering a skilled workforce, and maintaining consistent design practices.</li>
-                      <li>Leveraged UAV data to precisely measure cultivated areas, facilitating in-depth agricultural analysis and 
-                        enhancing decision-making in the agriculture sector.</li>
-                      <li>Executed a comprehensive analysis of pipe distribution networks by harnessing drone and DGPS data, 
-                          optimizing infrastructure management and maintenance strategies.</li>
-                    </ul>
+              <ul>
+                  <li>Collected optical data using drones and DGPS technology and utilized Pix4D software to process UAV data for diverse projects, to deliver precise and high-quality imagery.</li>
+                  <li>Demonstrated strong leadership by training interns in AutoCAD, Q-GIS, and the company's design standards, fostering a skilled workforce, and maintaining consistent design practices.</li>
+                  <li>Leveraged UAV data to precisely measure cultivated areas, facilitating in-depth agricultural analysis and enhancing decision-making in the agriculture sector.</li>
+                  <li>Executed a comprehensive analysis of pipe distribution networks by harnessing drone and DGPS data, optimizing infrastructure management and maintenance strategies.</li>
+              </ul>
             </div>
         </div>
         <a class="prev" onclick="plusSlides(-1, 'experience')">&#10094;</a>
@@ -241,13 +227,14 @@
         <div class="numbertext">1 / 3</div>
         <div>
           <h2>MSC Earth Observation and Geoinformation Management</h2>
-          <p><h3>University of Edinburgh</h3></p>
+          <h3>University of Edinburgh</h3>
           <p>Spetember 2022 - September 2023</p>
-          <ul>
-              <b>Dissertation: </b> 
+              <b>Dissertation: </b>
+            <ul>
             <li>Mapping Forest Disturbance using Satellite Radar Data.</li>
-              <ul>
+            </ul>
                 <b>Modules:</b>
+           <ul>
                 <li>Spatial Modelling and Analysis</li>
                 <li>Technological Infrastructure for GIS</li>
                 <li>Research Practice and Project Planning</li>
@@ -258,23 +245,17 @@
               </ul>
               <ul>
                 <b>Projects:</b>
-                <li> <h3>Compared commercial values of green spaces in Edinburgh using accessibility analysis.</h3>
-                    Conducted a comprehensive survey to gather essential data and performed an accessibility analysis to 
-                    explore the interplay between accessibility factors and the economic worth of green spaces.</li>
-                <li> <h3>Interactive Web map of the University of Edinburgh.</h3>
-                    Developed an interactive web map of campus facilities and services at the University of Edinburgh using 
-                    Oracle Spatial, SQL, HTML, CSS, JavaScript, and Python techniques.</li>
-                  <li> <h3>I Change detection in Ice Volume.</h3>
-                   Handled a large volume of LVIS data in HDF5 to perform change detection on Pine Island Glacier 
-                   using Python.</li>
-                  <li> <h3>Exploring Patterns in Census Data of the City of Edinburgh.</h3>
-                    Utilized Self-Organizing Maps (SOM), an unsupervised machine learning technique, to analyze census 
-                    data in the city of Edinburgh.</li>
+                   <h3>Compared commercial values of green spaces in Edinburgh using accessibility analysis.</h3>
+                   <li> Conducted a comprehensive survey to gather essential data and performed an accessibility analysis to explore the interplay between accessibility factors and the economic worth of green spaces.</li>
+                   <h3>Interactive Web map of the University of Edinburgh.</h3>
+                   <li> Developed an interactive web map of campus facilities and services at the University of Edinburgh using Oracle Spatial, SQL, HTML, CSS, JavaScript, and Python techniques.</li>
+                   <h3> Change detection in Ice Volume.</h3>
+                   <li> Handled a large volume of LVIS data in HDF5 to perform change detection on Pine Island Glacier using Python.</li>
+                   <h3>Exploring Patterns in Census Data of the City of Edinburgh.</h3>
+                   <li> Utilized Self-Organizing Maps (SOM), an unsupervised machine learning technique, to analyze census data in the city of Edinburgh.</li>
               </ul>
-              <ul>
-                <b>Class Representative: Social Events - Coordinated social events as the Class Representative. </b>
-              </ul>
-          </ul>
+                <b>Class Representative:  </b>
+             <p>Social Events - Coordinated social events as the Class Representative. </p>
         </div>
       </div>
   
@@ -282,7 +263,7 @@
         <div class="numbertext">2 / 3</div>
         <div>
           <h2>MSC Geoinformatics</h2>
-          <p><h3>Savitribai Phule Pune University</h3></p>
+          <h3>Savitribai Phule Pune University</h3>
           <p>Spetember 2022 - September 2023</p>
           <ul>
             <b>Dissertation: </b> <li>Designing pipe distribution network using UAV and DGPS data.</li>
@@ -306,7 +287,7 @@
         <div class="numbertext">3 / 3</div>
         <div>
           <h2>BSC Geography</h2>
-          <p><h3>Sir ParshramBhau College, Pune.</h3></p>
+          <h3>Sir ParshramBhau College, Pune.</h3>
           <p>June 2015 - May 2018</p>
         </div>
       </div>
