--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <h2>Geospatial Engineer</h2>
               <h3>Vasundharaa Geo technologies Pvt. Ltd.- Pune, India.</h3>
               <p>September 2021 - June 2022</p>
-                 <ul>
+                 <ul class="bullet-list">
                     <li> Performed an impact assessment to analyze the effects of water interventions on soil quality, employing various indices, including NDVI, IPVI, NDWI, and LST using Sentinel-2 and Landsat data. The insights of this analysis contributed to informed decision-making processes.</li>
                     <li> Extracted settlement data and implemented change detection techniques to detect and track illegal construction activities, providing valuable insights into urbanization trends and contributing to improved urban management.</li>
                     <li> Utilized Synthetic Aperture Radar (SAR) data from Sentinel-1 satellite for flood mapping using SNAP, enhancing disaster preparedness and response efforts.</li>
@@ -185,7 +185,7 @@
               <h2>Research Intern</h2>
               <p><h3>North-Eastern Space Application Centre (NESAC-ISRO) - Umiam, India.</h3></p>
               <p>July 2021 – Sep 2021</p>
-                    <ul>
+                    <ul class="bullet-list">
                       <li>Utilized SVM and RF machine learning algorithms to extract water bodies with high accuracy.</li>
                     </ul>
             </div>
@@ -197,7 +197,7 @@
               <h2>GIS Analyst</h2>
               <h3>Terra Informatics Services Pvt. Ltd. - Pune, India.</h3>
               <p>April 2020 – June 2021</p>
-              <ul>
+              <ul class="bullet-list">
                   <li>Collected optical data using drones and DGPS technology and utilized Pix4D software to process UAV data for diverse projects, to deliver precise and high-quality imagery.</li>
                   <li>Demonstrated strong leadership by training interns in AutoCAD, Q-GIS, and the company's design standards, fostering a skilled workforce, and maintaining consistent design practices.</li>
                   <li>Leveraged UAV data to precisely measure cultivated areas, facilitating in-depth agricultural analysis and enhancing decision-making in the agriculture sector.</li>
@@ -234,7 +234,7 @@
             <li>Mapping Forest Disturbance using Satellite Radar Data.</li>
             </ul>
                 <b>Modules:</b>
-           <ul>
+           <ul class="bullet-list">
                 <li>Spatial Modelling and Analysis</li>
                 <li>Technological Infrastructure for GIS</li>
                 <li>Research Practice and Project Planning</li>
@@ -242,9 +242,9 @@
                 <li>Object-Oriented Software Engineering</li>
                 <li>Visual Analytics</li>
                 <li>Active Remote Sensing: Radar and Lidar</li>
-              </ul>
-              <ul>
+           </ul>
                 <b>Projects:</b>
+                <ul class="bullet-list">
                    <h3>Compared commercial values of green spaces in Edinburgh using accessibility analysis.</h3>
                    <li> Conducted a comprehensive survey to gather essential data and performed an accessibility analysis to explore the interplay between accessibility factors and the economic worth of green spaces.</li>
                    <h3>Interactive Web map of the University of Edinburgh.</h3>
@@ -267,7 +267,7 @@
           <p>Spetember 2022 - September 2023</p>
           <ul>
             <b>Dissertation: </b> <li>Designing pipe distribution network using UAV and DGPS data.</li>
-              <ul>
+              <ul class="bullet-list">
                 <b>Modules:</b>
                 <li>Fundamentals of Remote Sensing and GIS</li>
                 <li>Digital Image Processing</li>
