--- a/index.html
+++ b/index.html
@@ -245,14 +245,14 @@
            </ul>
                 <b>Projects:</b>
                 <ul class="bullet-list">
-                   <h3>Compared commercial values of green spaces in Edinburgh using accessibility analysis.</h3>
-                   <li> Conducted a comprehensive survey to gather essential data and performed an accessibility analysis to explore the interplay between accessibility factors and the economic worth of green spaces.</li>
-                   <h3>Interactive Web map of the University of Edinburgh.</h3>
-                   <li> Developed an interactive web map of campus facilities and services at the University of Edinburgh using Oracle Spatial, SQL, HTML, CSS, JavaScript, and Python techniques.</li>
-                   <h3> Change detection in Ice Volume.</h3>
-                   <li> Handled a large volume of LVIS data in HDF5 to perform change detection on Pine Island Glacier using Python.</li>
-                   <h3>Exploring Patterns in Census Data of the City of Edinburgh.</h3>
-                   <li> Utilized Self-Organizing Maps (SOM), an unsupervised machine learning technique, to analyze census data in the city of Edinburgh.</li>
+                   <li> <h3>Compared commercial values of green spaces in Edinburgh using accessibility analysis.</h3>
+                    Conducted a comprehensive survey to gather essential data and performed an accessibility analysis to explore the interplay between accessibility factors and the economic worth of green spaces.</li>
+                   <li> <h3>Interactive Web map of the University of Edinburgh.</h3>
+                    Developed an interactive web map of campus facilities and services at the University of Edinburgh using Oracle Spatial, SQL, HTML, CSS, JavaScript, and Python techniques.</li>
+                   <li> <h3> Change detection in Ice Volume.</h3>
+                   Handled a large volume of LVIS data in HDF5 to perform change detection on Pine Island Glacier using Python.</li>
+                   <li> <h3>Exploring Patterns in Census Data of the City of Edinburgh.</h3>
+                    Utilized Self-Organizing Maps (SOM), an unsupervised machine learning technique, to analyze census data in the city of Edinburgh.</li>
               </ul>
                 <b>Class Representative:  </b>
              <p>Social Events - Coordinated social events as the Class Representative. </p>
