--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           and deliver significant results. My passion lies in leveraging my knowledge in the geospatial field to drive positive social and 
           environmental impact. I am committed to ensuring that the projects I work on contribute towards making the world a better place.</b></p>
           <a href="https://drive.google.com/file/d/1AinLlfUaJHVvNYbHL4Fq7pyWQjMGnvfd/view" class="cta" target="_blank">View Resume</a>
+          <a href="https://github.com/Rajat1097?tab=repositories" class="cta" target="_blank">GitHub</a>
       </div>
     </div>
   </section>
