--- a/index.html
+++ b/index.html
@@ -70,9 +70,17 @@
           spatial challenges. With strong critical thinking, analytical, and project management skills, I can swiftly grasp new concepts 
           and deliver significant results. My passion lies in leveraging my knowledge in the geospatial field to drive positive social and 
           environmental impact. I am committed to ensuring that the projects I work on contribute towards making the world a better place.</b></p>
-          <a href="https://drive.google.com/file/d/1AinLlfUaJHVvNYbHL4Fq7pyWQjMGnvfd/view" class="cta" target="_blank">View Resume</a>
-          <a href="https://www.linkedin.com/in/rajat-dhane" class="cta" target="_blank">Linkedin</a>
-          <a href="https://github.com/Rajat1097?tab=repositories" class="cta" target="_blank">GitHub</a>
+          <div class="contact-links">
+            <a href="https://drive.google.com/file/d/1AinLlfUaJHVvNYbHL4Fq7pyWQjMGnvfd/view" class="cta" target="_blank">
+                <i class="fa fa-file-pdf-o"></i> View Resume
+            </a>
+            <a href="https://www.linkedin.com/in/rajat-dhane" class="cta" target="_blank">
+                <i class="fa fa-linkedin"></i> Linkedin
+            </a>
+            <a href="https://github.com/Rajat1097?tab=repositories" class="cta" target="_blank">
+                <i class="fa fa-github"></i> GitHub
+            </a>
+        </div>
       </div>
     </div>
   </section>
