--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
               <p><h3>North-Eastern Space Application Centre (NESAC-ISRO) - Umiam, India.</h3></p>
               <p>July 2021 – Sep 2021</p>
                     <ul class="bullet-list">
-                      <li>Utilized SVM and RF machine learning algorithms to extract water bodies with high accuracy.</li>
+                      <li> Utilized SVM and RF machine learning algorithms to extract water bodies with high accuracy.</li>
+                      <li> Delineated drainage network using SRTM DEM, contributing to improved hydrological understanding.</li>
                     </ul>
             </div>
         </div>
@@ -208,10 +209,10 @@
               <h3>Terra Informatics Services Pvt. Ltd. - Pune, India.</h3>
               <p>April 2020 – June 2021</p>
               <ul class="bullet-list">
-                  <li>Collected optical data using drones and DGPS technology and utilized Pix4D software to process UAV data for diverse projects, to deliver precise and high-quality imagery.</li>
-                  <li>Demonstrated strong leadership by training interns in AutoCAD, Q-GIS, and the company's design standards, fostering a skilled workforce, and maintaining consistent design practices.</li>
-                  <li>Leveraged UAV data to precisely measure cultivated areas, facilitating in-depth agricultural analysis and enhancing decision-making in the agriculture sector.</li>
-                  <li>Executed a comprehensive analysis of pipe distribution networks by harnessing drone and DGPS data, optimizing infrastructure management and maintenance strategies.</li>
+                  <li> Collected optical data using drones and DGPS technology and utilized Pix4D software to process UAV data for diverse projects, to deliver precise and high-quality imagery.</li>
+                  <li> Demonstrated strong leadership by training interns in AutoCAD, Q-GIS, and the company's design standards, fostering a skilled workforce, and maintaining consistent design practices.</li>
+                  <li> Leveraged UAV data to precisely measure cultivated areas, facilitating in-depth agricultural analysis and enhancing decision-making in the agriculture sector.</li>
+                  <li> Executed a comprehensive analysis of pipe distribution networks by harnessing drone and DGPS data, optimizing infrastructure management and maintenance strategies.</li>
               </ul>
             </div>
         </div>
