--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
                    Handled a large volume of LVIS data in HDF5 to perform change detection on Pine Island Glacier using Python.</li>
                    <li> <h3>Exploring Patterns in Census Data of the City of Edinburgh.</h3>
                     Utilized Self-Organizing Maps (SOM), an unsupervised machine learning technique, to analyze census data in the city of Edinburgh.</li>
+                   <li> <h3>Oil spill detection using SNAP</h3>
+                    Detected Oil spills using SAR data to aid in emergency response and effectively direct clean-up measures.</li>
               </ul>
                 <b>Class Representative:  </b>
              <p>Social Events - Coordinated social events as the Class Representative. </p>
