--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>Rajat.<span></span></h1>
-        <h2>I am Remote Sensing and GIS Enthusiast.<span></span></h2>
+        <h2>I am a Remote Sensing and GIS Enthusiast.<span></span></h2>
         <!-- <a href="#projects" type="button" class="cta">Portfolio</a>   -->
       </div>
     </div>
