--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="skills-item">
           <div class="icon"><img src="img/miss.png" /></div>
-          <h2>Miscellaneous</h2>
+          <h2>Geospatial Skills</h2>
           <ul>
             <li>Data capture</li>
             <li>Map production</li>
