--- a/index.html
+++ b/index.html
@@ -329,12 +329,11 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>SAR</h2>
-            <p> Will Add Soon</p>
+            <h1>Delineation of Watershed</h1>
+            <p> Watershed delineation is a fundamental process in the field of hydrology and environmental science. It involves the identification of the boundaries of a watershed, which is an area of land where all the surface water drains into a common outlet, such as a river, stream, or lake. In addition to delineating watershed boundaries, hydrologists often classify the streams within a watershed into different orders based on their size and position within the drainage network</p>
           </div>
           <div class="project-img">
-            <img src="img/project.png" alt="img">
+            <img src="img/Watershed_1.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
