--- a/index.html
+++ b/index.html
@@ -338,12 +338,11 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Forest Change</h2>
-            <p>Will Add Soon</p>
+            <h1>Oil Spill Detection</h1>
+            <p>Sentinel-1 is equipped with synthetic aperture radar (SAR) sensors. These radar images are exceptionally valuable for oil spill detection as they are unaffected by weather conditions, and they can detect oil even in the absence of visible light. Oil spills on water surfaces often cause changes in radar backscatter values in Sentinel-1 imagery. To extract regions with significant changes, a threshold is applied. Pixels with backscatter values above this threshold are considered potential oil spill. </p>
           </div>
           <div class="project-img">
-            <img src="img/project.png" alt="img">
+            <img src="img/oil_spil_detected.JPG" alt="img">
           </div>
         </div>
       </div>
