added site suitability project

--- a/index.html
+++ b/index.html
@@ -336,6 +336,15 @@
             <img src="img/Watershed_1.jpg" alt="img">
           </div>
         </div>
+          <div class="project-item">
+          <div class="project-info">
+            <h1>Site Suitability for Mulberry Plantation</h1>
+            <p>Site suitability analysis is a crucial step in the successful cultivation of mulberry plants.  This analysis integrates key data layers, including soil types, slope characteristics, land use and land cover (LULC) information, and groundwater availability. By combining these datasets in QGIS, we create a comprehensive site suitability map, highlighting the most favorable locations for mulberry cultivation.</p>
+          </div>
+          <div class="project-img">
+            <img src="img/Mulberry.png" alt="img">
+          </div>
+        </div>
         <div class="project-item">
           <div class="project-info">
             <h1>Oil Spill Detection</h1>
