classification project added

--- a/index.html
+++ b/index.html
@@ -347,6 +347,15 @@
         </div>
         <div class="project-item">
           <div class="project-info">
+            <h1>Satellite Image Classification - Supervised</h1>
+            <p> Image classification is a fundamental technique in remote sensing. One of the primary applications of image classification is to analyze land cover and land use patterns over large areas. We classified a satellite image into five distinct classes: Agriculture, Water, Sand, Built-Up, and Forest. Image classification is a crucial step in the analysis of remote sensing data, enabling the extraction of meaningful information from satellite images</p>
+          </div>
+          <div class="project-img">
+            <img src="img/Classified.JPG" alt="img">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
             <h1>Oil Spill Detection</h1>
             <p>Sentinel-1 is equipped with synthetic aperture radar (SAR) sensors. These radar images are exceptionally valuable for oil spill detection as they are unaffected by weather conditions, and they can detect oil even in the absence of visible light. Oil spills on water surfaces often cause changes in radar backscatter values in Sentinel-1 imagery. To extract regions with significant changes, a threshold is applied. Pixels with backscatter values above this threshold are considered potential oil spill. </p>
           </div>
