--- a/index.html
+++ b/index.html
@@ -164,53 +164,41 @@
   </section>
   <!-- End Skills Section -->
 
-  <!-- Projects Section  -->
+<!-- start of project section -->
+  <!-- Project Section -->
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
         <h1 class="section-title">Pro<span>jects</span></h1>
       </div>
-      <div class="all-projects">
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Delineation of Watershed</h1>
-            <p> Watershed delineation is a fundamental process in the field of hydrology and environmental science. It involves the identification of the boundaries of a watershed, which is an area of land where all the surface water drains into a common outlet, such as a river, stream, or lake. In addition to delineating watershed boundaries, hydrologists often classify the streams within a watershed into different orders based on their size and position within the drainage network</p>
-          </div>
-          <div class="project-img">
-            <img src="img/Watershed_1.jpg" alt="img">
-          </div>
-        </div>
-          <div class="project-item">
-          <div class="project-info">
-            <h1>Site Suitability for Mulberry Plantation</h1>
-            <p>Site suitability analysis is a crucial step in the successful cultivation of mulberry plants.  This analysis integrates key data layers, including soil types, slope characteristics, land use and land cover (LULC) information, and groundwater availability. By combining these datasets in QGIS, we create a comprehensive site suitability map, highlighting the most favorable locations for mulberry cultivation.</p>
-          </div>
-          <div class="project-img">
-            <img src="img/Mulberry.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Satellite Image Classification - Supervised</h1>
-            <p> Image classification is a fundamental technique in remote sensing. One of the primary applications of image classification is to analyze land cover and land use patterns over large areas. We classified a satellite image into five distinct classes: Agriculture, Water, Sand, Built-Up, and Forest. Image classification is a crucial step in the analysis of remote sensing data, enabling the extraction of meaningful information from satellite images</p>
-          </div>
-          <div class="project-img">
-            <img src="img/Classified.JPG" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Oil Spill Detection</h1>
-            <p>Sentinel-1 is equipped with synthetic aperture radar (SAR) sensors. These radar images are exceptionally valuable for oil spill detection as they are unaffected by weather conditions, and they can detect oil even in the absence of visible light. Oil spills on water surfaces often cause changes in radar backscatter values in Sentinel-1 imagery. To extract regions with significant changes, a threshold is applied. Pixels with backscatter values above this threshold are considered potential oil spill. </p>
-          </div>
-          <div class="project-img">
-            <img src="img/oil_spil_detected.JPG" alt="img">
-          </div>
-        </div>
+    <div class="project-grid">
+      <div class="project-card">
+        <img src="img/Watershed_1.jpg" alt="Project 1">
+        <h1>Delineation of Watershed</h1>
+        <p> Watershed delineation is a fundamental process in the field of hydrology and environmental science. It involves the identification of the boundaries of a watershed, which is an area of land where all the surface water drains into a common outlet, such as a river, stream, or lake. In addition to delineating watershed boundaries, hydrologists often classify the streams within a watershed into different orders based on their size and position within the drainage network</p>
+        <!-- <a href="#" class="details-button">More Details</a> -->
+      </div>
+      <div class="project-card">
+        <img src="img/Mulberry.png" alt="Project 2">
+        <h1>Site Suitability for Mulberry Plantation</h1>
+        <p>Site suitability analysis is a crucial step in the successful cultivation of mulberry plants.  This analysis integrates key data layers, including soil types, slope characteristics, land use and land cover (LULC) information, and groundwater availability. By combining these datasets in QGIS, we create a comprehensive site suitability map, highlighting the most favorable locations for mulberry cultivation.</p>
+        <!-- <a href="#" class="details-button">More Details</a> -->
+      </div>
+      <div class="project-card">
+        <img src="img/Classified.JPG" alt="Project 3">
+        <h1>Satellite Image Classification - Supervised</h1>
+        <p> Image classification is a fundamental technique in remote sensing. One of the primary applications of image classification is to analyze land cover and land use patterns over large areas. We classified a satellite image into five distinct classes: Agriculture, Water, Sand, Built-Up, and Forest. Image classification is a crucial step in the analysis of remote sensing data, enabling the extraction of meaningful information from satellite images</p>
+        <!-- <a href="#" class="details-button">More Details</a> -->
+      </div>
+      <div class="project-card">
+        <img src="img/oil_spil_detected.JPG" alt="Project 4">
+        <h1>Oil Spill Detection</h1>
+        <p>Sentinel-1 is equipped with synthetic aperture radar (SAR) sensors. These radar images are exceptionally valuable for oil spill detection as they are unaffected by weather conditions, and they can detect oil even in the absence of visible light. Oil spills on water surfaces often cause changes in radar backscatter values in Sentinel-1 imagery. To extract regions with significant changes, a threshold is applied. Pixels with backscatter values above this threshold are considered potential oil spill. </p>
+        <!-- <a href="#" class="details-button">More Details</a> -->
       </div>
     </div>
   </section>
-  <!-- End Projects Section -->
+  <!-- End of Project Section -->
 
   
 
