--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
         <p>Sentinel-1 is equipped with synthetic aperture radar (SAR) sensors. These radar images are exceptionally valuable for oil spill detection as they are unaffected by weather conditions, and they can detect oil even in the absence of visible light. Oil spills on water surfaces often cause changes in radar backscatter values in Sentinel-1 imagery. To extract regions with significant changes, a threshold is applied. Pixels with backscatter values above this threshold are considered potential oil spill. </p>
         <!-- <a href="#" class="details-button">More Details</a> -->
       </div>
+      <div class="project-card">
+        <img src="img/greenspace.JPG" alt="Project 4">
+        <h1>Capital Green Space - Commercial Value</h1>
+        <p>Urban greenspaces provide multiple important benefits, including influencing surrounding commercial value. This website provides an overview of research undertaken to investigate the commercial value of greenspaces across the city of Edinburgh. The research involved exploring green spaces impact on property values, population, distribution of shops, and transport routes to assess accessibility, particularly focusing on Princes Street Gardens and Craigmillar Castle Park.</p>
+        <!-- <a href="#" class="details-button">More Details</a> -->
+      </div>
     </div>
   </section>
   <!-- End of Project Section -->
