--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <img src="img/greenspace.JPG" alt="Project 4">
         <h1>Capital Green Space - Commercial Value</h1>
         <p>Urban greenspaces provide multiple important benefits, including influencing surrounding commercial value. This website provides an overview of research undertaken to investigate the commercial value of greenspaces across the city of Edinburgh. The research involved exploring green spaces impact on property values, population, distribution of shops, and transport routes to assess accessibility, particularly focusing on Princes Street Gardens and Craigmillar Castle Park.</p>
-        <!-- <a href="#" class="details-button">More Details</a> -->
+        <a href="https://www.geos.ed.ac.uk/~s2318332/InteractiveMap/index.html" class="custom-link" target="_blank"></i> Green Space</a>
       </div>
     </div>
   </section>
