added a project Web Map

--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
         <p>Urban greenspaces provide multiple important benefits, including influencing surrounding commercial value. This website provides an overview of research undertaken to investigate the commercial value of greenspaces across the city of Edinburgh. The research involved exploring green spaces impact on property values, population, distribution of shops, and transport routes to assess accessibility, particularly focusing on Princes Street Gardens and Craigmillar Castle Park.</p>
         <a href="https://www.geos.ed.ac.uk/~s2318332/InteractiveMap/index.html" class="custom-link" target="_blank"></i> Green Space</a>
       </div>
+      <div class="project-card">
+        <img src="img/webmap.JPG" alt="Project 6">
+        <h1>Interactive Web Map - University of Edinburgh</h1>
+        <p>This project constructs an interactive map of a university campus that includes main buildings, roads, and popular spots. The user interface will allow users to conduct spatial queries, such as finding the nearest places of interest or determining the distance between two points. Not only can this interactive map be used to assist students to familiarize themselves with the university area before attending, but also acts as a guide for the public when visiting the university.</p>
+        <a href="https://www.geos.ed.ac.uk/~s2404441/website/index.html" class="custom-link" target="_blank"></i> Web Map</a>
+      </div>
     </div>
   </section>
   <!-- End of Project Section -->
