--- a/index.html
+++ b/index.html
@@ -208,6 +208,12 @@
         <p>This project constructs an interactive map of a university campus that includes main buildings, roads, and popular spots. The user interface will allow users to conduct spatial queries, such as finding the nearest places of interest or determining the distance between two points. Not only can this interactive map be used to assist students to familiarize themselves with the university area before attending, but also acts as a guide for the public when visiting the university.</p>
         <a href="https://www.geos.ed.ac.uk/~s2404441/website/index.html" class="custom-link" target="_blank"></i> Web Map</a>
       </div>
+      <div class="project-card">
+        <img src="img/Story_Map.png" alt="Project 7">
+        <h1>Story Map - India Unity in Diversity</h1>
+        <p>India's cultural richness and diversity have been profoundly shaped by numerous empires and dynasties throughout its history. Its vast expanse across the Indian subcontinent leads to diverse customs, traditions, and clothing that vary with the region's climate. This rich culture finds expression in India's art, architecture, literature, music, dance, and cuisine. India's multicultural society comprises people of different religions, languages, and backgrounds, making it one of the world's most diverse nations.</p>
+        <a href="https://arcg.is/0qPb9f0" class="custom-link" target="_blank"></i> Story Map</a>
+      </div>
     </div>
   </section>
   <!-- End of Project Section -->
