--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@
         <p>India's cultural richness and diversity have been profoundly shaped by numerous empires and dynasties throughout its history. Its vast expanse across the Indian subcontinent leads to diverse customs, traditions, and clothing that vary with the region's climate. This rich culture finds expression in India's art, architecture, literature, music, dance, and cuisine. India's multicultural society comprises people of different religions, languages, and backgrounds, making it one of the world's most diverse nations.</p>
         <a href="https://arcg.is/0qPb9f0" class="custom-link" target="_blank"></i> Story Map</a>
       </div>
+      <div class="project-card">
+        <img src="img/Flood Mapping.png" alt="Project 8">
+        <h1>Flood Mapping - Myanmar</h1>
+        <p>The radar data from Sentinel-1 enables the detection and delineation of flood extents by highlighting changes in surface water. By comparing images acquired before and after a flood event, We can identify areas that have been inundated, assisting in the rapid assessment of affected regions. Additionally, the high spatial resolution of Sentinel-1 data allows for the detailed mapping of flood boundaries, aiding in the precision of disaster management and response efforts.</p>
+      </div>
+      
     </div>
   </section>
   <!-- End of Project Section -->
