air quality project added

--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@
         <h1>Flood Mapping - Myanmar</h1>
         <p>The radar data from Sentinel-1 enables the detection and delineation of flood extents by highlighting changes in surface water. By comparing images acquired before and after a flood event, We can identify areas that have been inundated, assisting in the rapid assessment of affected regions. Additionally, the high spatial resolution of Sentinel-1 data allows for the detailed mapping of flood boundaries, aiding in the precision of disaster management and response efforts.</p>
       </div>
+      <div class="project-card">
+        <img src="img/NO2.JPG" alt="Project 9">
+        <h1>Air Quality Mapping - No2 Concentration</h1>
+        <p>This project leverages Google Earth Engine to access Sentinel-5P satellite imagery, focusing on India, and isolates the concentration of nitrogen dioxide (NO2) over a specific time frame. By calculating the mean NO2 column density within a defined area, it effectively demonstrates how environmental monitoring tools can be harnessed for assessing air quality. With a visually compelling map that employs a color palette to represent NO2 concentration levels, this exemplifies a valuable application in tracking and addressing air quality concerns.</p>
+        <a href="https://github.com/Rajat1097/Geospatial_Python/blob/main/Air_Quality.js" class="custom-link" target="_blank"></i>GitHub Code</a>
+     </div>
       
     </div>
   </section>
