GEE link updates

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <img src="img/NO2.JPG" alt="Project 9">
         <h1>Air Quality Mapping - No2 Concentration</h1>
         <p>This project leverages Google Earth Engine to access Sentinel-5P satellite imagery, focusing on India, and isolates the concentration of nitrogen dioxide (NO2) over a specific time frame. By calculating the mean NO2 column density within a defined area, it effectively demonstrates how environmental monitoring tools can be harnessed for assessing air quality. With a visually compelling map that employs a color palette to represent NO2 concentration levels, this exemplifies a valuable application in tracking and addressing air quality concerns.</p>
-        <a href="https://github.com/Rajat1097/Geospatial_Python/blob/main/Air_Quality.js" class="custom-link" target="_blank"></i>GitHub Code</a>
+        <a href="https://code.earthengine.google.com/c4d1121dd7ffe343606b26df2eb288f4" class="custom-link" target="_blank"></i>GEE code</a>
      </div>
       
     </div>
