--- a/index.html
+++ b/index.html
@@ -225,6 +225,40 @@
         <p>This project leverages Google Earth Engine to access Sentinel-5P satellite imagery, focusing on India, and isolates the concentration of nitrogen dioxide (NO2) over a specific time frame. By calculating the mean NO2 column density within a defined area, it effectively demonstrates how environmental monitoring tools can be harnessed for assessing air quality. With a visually compelling map that employs a color palette to represent NO2 concentration levels, this exemplifies a valuable application in tracking and addressing air quality concerns.</p>
         <a href="https://code.earthengine.google.com/c4d1121dd7ffe343606b26df2eb288f4" class="custom-link" target="_blank"></i>GEE code</a>
      </div>
+
+<div class="project-card">
+  <div class="slideshow-container">
+    <div class="mySlides fade project-slides">
+            <img src="img/Closest Facility.png" alt="Project 10">
+            <h3>Closest Facility</h3>
+     </div>
+     <div class="mySlides fade project-slides">
+          <img src="img/Closest Facility with Barrier.png" alt="Project 10">
+          <h3>Closest Facility with Barrier</h3>
+     </div>
+      <div class="mySlides fade project-slides">
+          <img src="img/Service Area.png" alt="Project 10">
+          <h3>Service Area</h3>
+      </div>
+    <div class="mySlides fade project-slides">
+        <img src="img/Service Area with Barrier.png" alt="Project 10">
+        <h3>Service Area with Barrier</h3>
+    </div>
+    </div>
+      <div class="project-dots">
+        <span class="dot project-dot" onclick="currentSlide(1, 'project')"></span>
+        <span class="dot project-dot" onclick="currentSlide(2, 'project')"></span>
+        <span class="dot project-dot" onclick="currentSlide(3, 'project')"></span>
+        <span class="dot project-dot" onclick="currentSlide(4, 'project')"></span>
+      </div>
+      <h1>Network Analysis</h1>
+      <p>Network analysis is a tool for optimizing facility location and resource allocation. Whether with or without barriers, they help streamline decision-making processes, and plan for emergencies, while accounting for the complexities of real-world geography.</p>
+      <p><b>Closest Facility:</b> Identifying the nearest facility based on factors like distance or travel time. Commonly used in logistics, emergency response, and location-based services.</p>
+      <p><b>Service Area:</b> Service area analysis,  helps identify the geographic extent that a service can efficiently cover. </p>
+  </div>
+</div>
+</div>
+
       
     </div>
   </section>
