Update index.html for network analysis

--- a/index.html
+++ b/index.html
@@ -256,11 +256,16 @@
       <p><b>Closest Facility:</b> Identifying the nearest facility based on factors like distance or travel time. Commonly used in logistics, emergency response, and location-based services.</p>
       <p><b>Service Area:</b> Service area analysis,  helps identify the geographic extent that a service can efficiently cover. </p>
   </div>
-</div>
-</div>
 
+  <div class="project-card">
+    <img src="img/Hotspot Map.jpg" alt="Project 9">
+    <h1>Hotspot Analysis</h1>
+    <p> To address socio-economic disparities in Edinburgh, By focusing on the unemployment factor, we can identify geographic areas where joblessness is particularly concentrated, providing essential insights for policymakers and community organizations. Through rigorous spatial analysis, we pinpoint hotspots of unemployment, enabling targeted interventions, workforce development initiatives, and resources to uplift these communities. Features within the hottest spots have the highest positive Z-scores, and within cool spots, the most negative. </p>
+  </div>
       
-    </div>
+  </div>
+ </div>   
+</div>
   </section>
   <!-- End of Project Section -->
 
