--- a/index.html
+++ b/index.html
@@ -256,12 +256,18 @@
       <p><b>Closest Facility:</b> Identifying the nearest facility based on factors like distance or travel time. Commonly used in logistics, emergency response, and location-based services.</p>
       <p><b>Service Area:</b> Service area analysis,  helps identify the geographic extent that a service can efficiently cover. </p>
   </div>
-
   <div class="project-card">
     <img src="img/Hotspot Map.JPG" alt="Project 11">
     <h1>Hotspot Analysis</h1>
     <p> To address socio-economic disparities in Edinburgh, By focusing on the unemployment factor, we can identify geographic areas where joblessness is particularly concentrated, providing essential insights for policymakers and community organizations. Through rigorous spatial analysis, we pinpoint hotspots of unemployment, enabling targeted interventions, workforce development initiatives, and resources to uplift these communities. Features within the hottest spots have the highest positive Z-scores, and within cool spots, the most negative. </p>
   </div>
+  <div class="project-card">
+    <img src="img/DEM1.gif" alt="Project 6">
+    <h1>3D - DEM and Contours</h1>
+  <p>Creating a 3D model using a Digital Elevation Model (DEM) and adding contours to it is a powerful technique in geospatial analysis and visualization. This process allows for a detailed representation of terrain and elevation, making it easier to understand and communicate geographical features. You can use this 3D model and the contours for various applications, such as landscape visualization, flood modeling, or urban planning.</p>
+  </div>
+
+
       
   </div>
  </div>   
