Update index.html for animation project

--- a/index.html
+++ b/index.html
@@ -266,7 +266,11 @@
     <h1>3D - DEM and Contours</h1>
   <p>Creating a 3D model using a Digital Elevation Model (DEM) and adding contours to it is a powerful technique in geospatial analysis and visualization. This process allows for a detailed representation of terrain and elevation, making it easier to understand and communicate geographical features. You can use this 3D model and the contours for various applications, such as landscape visualization, flood modeling, or urban planning.</p>
   </div>
-
+  <div class="project-card">
+    <img src="img/WorldShipping1770.gif" alt="Project 13">
+    <h1>Animation Map</h1>
+  <p> A 2-D animation map of world shipping routes in 1770 is a remarkable way to visualize historical maritime trade and exploration. This type of project can be valuable for educational, historical, or research purposes. The animated map can help viewers understand the dynamics of global shipping routes during that period, the connections between different regions, and how these routes evolved over time. It's an engaging and informative way to explore the history of global trade and the impact it had on the world.</p>
+  </div>
 
       
   </div>
