--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <li> D-Bever</li>
             <li> Google Earth Pro</li>
             <li> AutoCAD</li>
+            <li> Postgres</li>
             <li> Esri Mobile Apps:
               <ul>
                 <li>ArcGIS Field Maps</li>
@@ -125,6 +126,7 @@
             <li> SQL</li>
             <li> HTML</li>
             <li> CSS</li>
+            <li> Postgres</li>
             <li> GitHub</li>
           </ul>
         </div>
