Project 14,15 and 16 added

--- a/index.html
+++ b/index.html
@@ -275,6 +275,32 @@
   </div>
 
       
+      <div class="project-card">
+        <img src="img/KDE.JPG" alt="Project 14">
+        <h1>Kernel Density Estimation - Fast Food Outlets</h1>
+        <p><b>Kernel Density:</b> KDE calculates the density of features in a neighborhood around those features but intelligently analyses the nature of the features included to exclude effects due to outliers and to define a suitable search radius to determine the size of neighborhood used during the process.</p>
+        <p><b>Zonal Statistics:</b> Zonal Statistics involves aggregating information from raster datasets within predefined zones, often represented by polygons. Zonal statistics based on the average density of fast food outlets within that zone</p>
+    </div>
+
+
+     <div class="project-card">
+      <img src="img/GWR.JPG" alt="Project 15">
+      <h1>Geographically Weighted Regression</h1>
+      <p> <b> Modeling the educational attainment within the US state of Georgia.</b> Geographically Weighted Regression (GWR), a local statistical technique, we delve into the intricate spatial variations of model parameters. Recognizing that datasets and relationships between variables evolve across space, GWR allows us to uncover nuanced shifts in regression parameters. By acknowledging the dynamic nature of these processes, we gain a more accurate understanding of the spatial intricacies shaping educational outcomes. This method gives localized insights, into a comprehensive analysis of the determinants of educational attainment in Georgi.</p></div>
+
+
+      <div class="project-card">
+        <img src="img/2SFCA_GP.JPG" alt="Project 16">
+        <h1>Spatial Accessibility to GP</h1>
+        <p> Utilizing the <b>Two-Step Floating Catchment Analysis (2SFCA)</b> for GP services in Glasgow City, this approach seamlessly integrates two catchments, each outlining the accessible healthcare area around individual General Practitioner locations. By overlaying these catchments, the 2SFCA produces a holistic spatial accessibility measure. The 2SFCA provides a nuanced understanding of how residents can access services beyond their immediate neighborhoods, offering insights crucial for healthcare planning and resource allocation.</p>
+     </div>
+
+
+
+
+      
+
+<!--  Add above      -->
   </div>
  </div>   
 </div>
