--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <li> ArcGIS Pro</li>
             <li> ArcGIS Online</li>
             <li> ArcGIS Desktop</li>
+            <li> Web Map</li>
             <li> Q-GIS</li>
             <li> ERDAS IMAGINE</li>
             <li> SNAP</li>
