--- a/index.html
+++ b/index.html
@@ -320,16 +320,17 @@
         <div class="numbertext">1 / 6</div>
           <div>
               <h2>GIS Consultant</h2>
-              <h3>Land Use Consultants Ltd. Edinburgh, United Kingdom.</h3>
-              <p>Feb 2024 - Present</p>
+              <h3>Ramboll. Edinburgh, United Kingdom.</h3>
+              <p>July 2024 - Present</p>
                  <ul class="bullet-list">
-                    <li> Assisted windfarm feasibility and environmental impact assessment, by mapping constraints and conducting spatial analysis to help other teams in decisions making.</li>
-                    <li> Conducted landscape character and landscape sensitivity assessment for sustainability appraisals, aiding local councils in informed decision-making.</li>
-                    <li> Investigated Grid Connection Route Options for overhead power line, focusing on enhancing operational efficiency while minimizing environmental impact.</li>
-                    <li> Conducted biodiversity net gain calculation and habitat mapping for Environmental Impact Assessment, ensuring ecological preservation and sustainable development.</li>
-                    <li> Capturing and processing of infrastructure, heritage, and landscape data of local authority to assess wind and solar renewable potential, based upon existing land use constraints.</li>
-                    <li> Provided GIS support from project inception, creating web maps for visualizing spatial data for Landscape Planning, Historic, and Ecology teams. Maintained current data records, performed spatial analysis, and developed field maps and Survey 123 for data collection during later stages. Exported figures for reports to meet project requirements.</li>
-                   </ul>
+                    <li> Developed and maintained Web Maps, Web Apps, and Data Collection applications, ensuring seamless updates and robust database management for efficient project workflows.</li>
+                    <li> Managed and coordinated projects from initiation to completion, ensuring timely delivery and alignment with client requirements and sustainability objectives.</li>
+                    <li> Created custom tools and scripts using ArcPy and Python to streamline workflows, reduce task time, and enhance operational efficiency across GIS processes.</li>
+                    <li> Designed and generated digital reports, consolidating spatial analysis, environmental assessments, and key findings for stakeholders and decision-makers.</li>
+                    <li> Overviewed the bidding process utilizing CRM systems, Business Intelligence suite, and Project Location Database to enhance bid accuracy and efficiency.</li>
+                    <li> Conducted one-to-one mentoring sessions with graduate team members, improving their proficiency with tools and workflows, enhancing time management skills, and performing quality checks on their work to ensure accuracy and consistency in daily tasks.</li>
+                    <li> Utilized satellite imagery for image classification and the determination of UKHab habitat codes, supporting biodiversity assessments.</li>
+                  </ul>
         </div>
           </div>
           <div class="mySlides fade experience-slides">
@@ -337,7 +338,7 @@
           <div>
               <h2>GIS Consultant</h2>
               <h3>Land Use Consultants Ltd. Edinburgh, United Kingdom.</h3>
-              <p>Feb 2024 - Present</p>
+              <p>Feb 2024 - July 2024</p>
                  <ul class="bullet-list">
                     <li> Assisted windfarm feasibility and environmental impact assessment, by mapping constraints and conducting spatial analysis to help other teams in decisions making.</li>
                     <li> Conducted landscape character and landscape sensitivity assessment for sustainability appraisals, aiding local councils in informed decision-making.</li>
@@ -345,7 +346,8 @@
                     <li> Conducted biodiversity net gain calculation and habitat mapping for Environmental Impact Assessment, ensuring ecological preservation and sustainable development.</li>
                     <li> Capturing and processing of infrastructure, heritage, and landscape data of local authority to assess wind and solar renewable potential, based upon existing land use constraints.</li>
                     <li> Provided GIS support from project inception, creating web maps for visualizing spatial data for Landscape Planning, Historic, and Ecology teams. Maintained current data records, performed spatial analysis, and developed field maps and Survey 123 for data collection during later stages. Exported figures for reports to meet project requirements.</li>
-                   </ul>
+                    <li> Conducted Peat Landslide Hazard and Risk Assessments, Shadow Flicker analysis, and Zone of Theoretical Visibility (ZTV) analysis, supporting environmental impact evaluations and mitigation strategies for renewable energy projects.</li>
+                 </ul>
         </div>
       </div>
 
@@ -568,4 +570,5 @@
 </body>
 
 </html>
+
 
